# paralegal-ai

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: copilot-instructions.md  copilot-setup-steps.yml
.github/workflows/: ci.yml
apps/bridge/: .dockerignore  .eslintrc.js  Dockerfile  jest.config.json  nest-cli.json  package.json  tsconfig.json
apps/bridge/src/: bridge.controller.ts  bridge.module.ts  main.ts
apps/bridge/src/audit/: audit.service.ts
apps/bridge/src/policy/: policy.service.ts
apps/bridge/test/: bridge.controller.spec.ts  policy.service.spec.ts  redaction.service.spec.ts
apps/connected-llm/: package.json
apps/connected-llm/src/: server.js
apps/ingestion/: package.json
apps/ingestion/src/: server.js
apps/landing/: .dockerignore  Dockerfile  README.md  jest.config.js  jest.setup.js  next.config.js  package.json  playwright.config.ts  tsconfig.json
apps/landing/__tests__/: demo.test.tsx  page.test.tsx
apps/landing/e2e/: demo.spec.ts
apps/landing/playwright-report/: index.html
apps/private-llm/: Dockerfile  entrypoint.sh
apps/summarizer/: .dockerignore  Dockerfile  package.json  pyproject.toml  requirements.txt
apps/summarizer/src/summarizer/: __init__.py  flagger.py  linker.py  main.py  schemas.py  service.py
apps/summarizer/tests/: test_service.py
config/: app.example.yaml
docs/: security.md
infra/: docker-compose.llm.yml  docker-compose.mono.yml
scripts/: doctor.mjs  print-dev-ready.js
tests/policy/: bridge.test.ts
(+6 files in other folders)
